// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render basic paged table 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root pagedTableCardRoot card"
    data-testid="paged-table"
  >
    <div
      class="MuiCardHeader-root"
      data-testid="card-header"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title card-title"
        />
        <span
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiCardHeader-subheader"
        />
      </div>
      <div
        class="MuiCardHeader-action headerActions"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Export to CSV
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiCardContent-root pagedTableCardBody tableContainer"
      data-testid="card-content"
    >
      <table
        class="MuiTable-root table"
        data-testid="table"
        tabindex="0"
      >
        <thead
          class="MuiTableHead-root TableHeader"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head columnOne-header tableHeader"
              scope="col"
            >
              Column One
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head columnTwo-header tableHeader"
              scope="col"
            >
              Column Two
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head tableHeader"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
            data-testid="0"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="0-0"
            >
              <span>
                First Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="0-1"
            >
              Second Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-third-datum-className"
              data-cell-id="0-2"
            >
              <span>
                Third Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="1"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="1-0"
            >
              <span>
                Fourth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="1-1"
            >
              Fifth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-sixth-datum-className"
              data-cell-id="1-2"
            >
              <span>
                Sixth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="2"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="2-0"
            >
              <span>
                Seventh Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="2-1"
            >
              Eighth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-ninth-datum-className"
              data-cell-id="2-2"
            >
              <span>
                Ninth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="3"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="3-0"
            >
              <span>
                Tenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="3-1"
            >
              Eleventh Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-twelfth-datum-className"
              data-cell-id="3-2"
            >
              <span>
                Twelfth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="4"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="4-0"
            >
              <span>
                Thirteenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="4-1"
            >
              Fifteenth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-sixteenth-datum-className"
              data-cell-id="4-2"
            >
              <span>
                Sixteenth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="5"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="5-0"
            >
              <span>
                Seventeenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="5-1"
            >
              Eighteenth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-ninteenth-datum-className"
              data-cell-id="5-2"
            >
              <span>
                Ninteenth Datum
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`render loading paged table 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root pagedTableCardRoot card"
    data-testid="paged-table"
  >
    <div
      class="MuiCardHeader-root"
      data-testid="card-header"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title card-title"
        />
        <span
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiCardHeader-subheader"
        />
      </div>
      <div
        class="MuiCardHeader-action headerActions"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Export to CSV
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiCardContent-root pagedTableCardBody tableContainer"
      data-testid="card-content"
    >
      <table
        class="MuiTable-root table"
        data-testid="table"
        tabindex="0"
      >
        <thead
          class="MuiTableHead-root TableHeader"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head columnOne-header tableHeader"
              scope="col"
            >
              Column One
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head columnTwo-header tableHeader"
              scope="col"
            >
              Column Two
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head tableHeader"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
            data-testid="0"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="0-0"
            >
              <span>
                First Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="0-1"
            >
              Second Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-third-datum-className"
              data-cell-id="0-2"
            >
              <span>
                Third Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="1"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="1-0"
            >
              <span>
                Fourth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="1-1"
            >
              Fifth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-sixth-datum-className"
              data-cell-id="1-2"
            >
              <span>
                Sixth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="2"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="2-0"
            >
              <span>
                Seventh Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="2-1"
            >
              Eighth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-ninth-datum-className"
              data-cell-id="2-2"
            >
              <span>
                Ninth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="3"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="3-0"
            >
              <span>
                Tenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="3-1"
            >
              Eleventh Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-twelfth-datum-className"
              data-cell-id="3-2"
            >
              <span>
                Twelfth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="4"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="4-0"
            >
              <span>
                Thirteenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="4-1"
            >
              Fifteenth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-sixteenth-datum-className"
              data-cell-id="4-2"
            >
              <span>
                Sixteenth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="5"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="5-0"
            >
              <span>
                Seventeenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="5-1"
            >
              Eighteenth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-ninteenth-datum-className"
              data-cell-id="5-2"
            >
              <span>
                Ninteenth Datum
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="spinnerOverlay active"
    data-is-active="true"
    data-testid="spinner-overlay"
  >
    <div
      class="loading"
    />
  </div>
</div>
`;

exports[`render paged table and test pagination 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root pagedTableCardRoot card"
    data-testid="paged-table"
  >
    <div
      class="MuiCardHeader-root"
      data-testid="card-header"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title card-title"
        >
          Test Table (2 Selected)
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiCardHeader-subheader"
        />
      </div>
      <div
        class="MuiCardHeader-action headerActions"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Export to CSV
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <p
          class="MuiTypography-root MuiTypography-body2"
        >
          Test Header Action
        </p>
      </div>
    </div>
    <div
      class="MuiCardContent-root pagedTableCardBody tableContainer"
      data-testid="card-content"
    >
      <table
        class="MuiTable-root table"
        data-testid="table"
        tabindex="0"
      >
        <thead
          class="MuiTableHead-root TableHeader"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head COLUMN_SELECT-header singleIcon"
              scope="col"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiPrivateSwitchBase-checked MuiCheckbox-checked MuiCheckbox-indeterminate indeterminate"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
                    />
                  </svg>
                  <input
                    checked=""
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="true"
                    data-testid="table-checkbox-header"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head columnOne-header tableHeader"
              scope="col"
            >
              Column One
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head columnTwo-header tableHeader"
              scope="col"
            >
              Column Two
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head tableHeader"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
            data-testid="First Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="First Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiPrivateSwitchBase-checked MuiCheckbox-checked active"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <input
                    checked=""
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-first-datum"
                    id="First Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="First Datum-1"
            >
              <span>
                First Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="First Datum-2"
            >
              Second Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-third-datum-className"
              data-cell-id="First Datum-3"
            >
              <span>
                Third Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Fourth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Fourth Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiPrivateSwitchBase-checked MuiCheckbox-checked active"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <input
                    checked=""
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-fourth-datum"
                    id="Fourth Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Fourth Datum-1"
            >
              <span>
                Fourth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Fourth Datum-2"
            >
              Fifth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-sixth-datum-className"
              data-cell-id="Fourth Datum-3"
            >
              <span>
                Sixth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Seventh Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Seventh Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-seventh-datum"
                    id="Seventh Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventh Datum-1"
            >
              <span>
                Seventh Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventh Datum-2"
            >
              Eighth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-ninth-datum-className"
              data-cell-id="Seventh Datum-3"
            >
              <span>
                Ninth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Tenth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Tenth Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-tenth-datum"
                    id="Tenth Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Tenth Datum-1"
            >
              <span>
                Tenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Tenth Datum-2"
            >
              Eleventh Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-twelfth-datum-className"
              data-cell-id="Tenth Datum-3"
            >
              <span>
                Twelfth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Thirteenth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Thirteenth Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-thirteenth-datum"
                    id="Thirteenth Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Thirteenth Datum-1"
            >
              <span>
                Thirteenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Thirteenth Datum-2"
            >
              Fifteenth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-sixteenth-datum-className"
              data-cell-id="Thirteenth Datum-3"
            >
              <span>
                Sixteenth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Seventeenth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Seventeenth Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-seventeenth-datum"
                    id="Seventeenth Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventeenth Datum-1"
            >
              <span>
                Seventeenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventeenth Datum-2"
            >
              Eighteenth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-ninteenth-datum-className"
              data-cell-id="Seventeenth Datum-3"
            >
              <span>
                Ninteenth Datum
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="MuiCardActions-root pagedTableCardFooter tableFooter"
      data-testid="card-actions"
    >
      <div
        class="table-pager tablePager"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters MuiTablePagination-toolbar"
        >
          <div
            class="MuiTablePagination-spacer"
          />
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-colorInherit MuiTablePagination-caption"
          >
            Rows per page:
          </span>
          <div
            class="MuiInputBase-root select-row-count selectRowCount"
            data-testid="rows-per-page"
          >
            <div
              class="MuiSelect-root MuiTablePagination-selectRoot"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select MuiTablePagination-select MuiSelect-selectMenu MuiInputBase-input"
                role="button"
                tabindex="0"
              >
                5
              </div>
              <input
                id="rows-per-page"
                type="hidden"
                value="5"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiTablePagination-selectIcon"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-colorInherit MuiTablePagination-caption"
          >
            Showing 1 to 5
          </span>
          <div
            class="MuiTablePagination-actions"
          >
            <button
              class="MuiButtonBase-root MuiButtonBase-disabled MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-disabled previous-page"
              data-testid="previous-page"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                  />
                </svg>
              </span>
            </button>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit next-page"
              data-testid="next-page"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render paged table and test sorting 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root pagedTableCardRoot card"
    data-testid="paged-table"
  >
    <div
      class="MuiCardHeader-root"
      data-testid="card-header"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title card-title"
        />
        <span
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiCardHeader-subheader"
        />
      </div>
      <div
        class="MuiCardHeader-action headerActions"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Export to CSV
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiCardContent-root pagedTableCardBody tableContainer"
      data-testid="card-content"
    >
      <table
        class="MuiTable-root table"
        data-testid="table"
        tabindex="0"
      >
        <thead
          class="MuiTableHead-root TableHeader"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              aria-sort="ascending"
              class="MuiTableCell-root MuiTableCell-head columnOne-header tableHeader"
              scope="col"
            >
              <span
                class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-active sort-columnOne"
                data-testid="sort-columnOne"
                role="button"
                tabindex="0"
              >
                Column One
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head columnTwo-header tableHeader"
              scope="col"
            >
              <span
                class="MuiButtonBase-root MuiTableSortLabel-root sort-columnTwo"
                data-testid="sort-columnTwo"
                role="button"
                tabindex="0"
              >
                Column Two
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head tableHeader"
              scope="col"
            >
              <span
                class="MuiButtonBase-root MuiTableSortLabel-root sort-"
                data-testid="sort-"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
            data-testid="First Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="First Datum-0"
            >
              <span>
                First Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="First Datum-1"
            >
              Second Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-third-datum-className"
              data-cell-id="First Datum-2"
            >
              <span>
                Third Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Fourth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Fourth Datum-0"
            >
              <span>
                Fourth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Fourth Datum-1"
            >
              Fifth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-sixth-datum-className"
              data-cell-id="Fourth Datum-2"
            >
              <span>
                Sixth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Seventh Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventh Datum-0"
            >
              <span>
                Seventh Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventh Datum-1"
            >
              Eighth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-ninth-datum-className"
              data-cell-id="Seventh Datum-2"
            >
              <span>
                Ninth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Tenth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Tenth Datum-0"
            >
              <span>
                Tenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Tenth Datum-1"
            >
              Eleventh Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-twelfth-datum-className"
              data-cell-id="Tenth Datum-2"
            >
              <span>
                Twelfth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Thirteenth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Thirteenth Datum-0"
            >
              <span>
                Thirteenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Thirteenth Datum-1"
            >
              Fifteenth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-sixteenth-datum-className"
              data-cell-id="Thirteenth Datum-2"
            >
              <span>
                Sixteenth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Seventeenth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventeenth Datum-0"
            >
              <span>
                Seventeenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventeenth Datum-1"
            >
              Eighteenth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-ninteenth-datum-className"
              data-cell-id="Seventeenth Datum-2"
            >
              <span>
                Ninteenth Datum
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`render paged table with all items selected, then unselect items 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root pagedTableCardRoot card"
    data-testid="paged-table"
  >
    <div
      class="MuiCardHeader-root"
      data-testid="card-header"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title card-title"
        >
           (6 Selected)
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiCardHeader-subheader"
        />
      </div>
      <div
        class="MuiCardHeader-action headerActions"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Export to CSV
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiCardContent-root pagedTableCardBody tableContainer"
      data-testid="card-content"
    >
      <table
        class="MuiTable-root table"
        data-testid="table"
        tabindex="0"
      >
        <thead
          class="MuiTableHead-root TableHeader"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head COLUMN_SELECT-header singleIcon"
              scope="col"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiPrivateSwitchBase-checked MuiCheckbox-checked active indeterminate"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <input
                    checked=""
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-header"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head columnOne-header tableHeader"
              scope="col"
            >
              Column One
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head columnTwo-header tableHeader"
              scope="col"
            >
              Column Two
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head tableHeader"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root test-row-classname"
            data-testid="First Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="First Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiPrivateSwitchBase-checked MuiCheckbox-checked active"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <input
                    checked=""
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-first-datum"
                    id="First Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="First Datum-1"
            >
              <span>
                First Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="First Datum-2"
            >
              Second Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-third-datum-className"
              data-cell-id="First Datum-3"
            >
              <span>
                Third Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root test-row-classname"
            data-testid="Fourth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Fourth Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiPrivateSwitchBase-checked MuiCheckbox-checked active"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <input
                    checked=""
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-fourth-datum"
                    id="Fourth Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Fourth Datum-1"
            >
              <span>
                Fourth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Fourth Datum-2"
            >
              Fifth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-sixth-datum-className"
              data-cell-id="Fourth Datum-3"
            >
              <span>
                Sixth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root test-row-classname"
            data-testid="Seventh Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Seventh Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiPrivateSwitchBase-checked MuiCheckbox-checked active"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <input
                    checked=""
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-seventh-datum"
                    id="Seventh Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventh Datum-1"
            >
              <span>
                Seventh Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventh Datum-2"
            >
              Eighth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-ninth-datum-className"
              data-cell-id="Seventh Datum-3"
            >
              <span>
                Ninth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root test-row-classname"
            data-testid="Tenth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Tenth Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiPrivateSwitchBase-checked MuiCheckbox-checked active"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <input
                    checked=""
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-tenth-datum"
                    id="Tenth Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Tenth Datum-1"
            >
              <span>
                Tenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Tenth Datum-2"
            >
              Eleventh Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-twelfth-datum-className"
              data-cell-id="Tenth Datum-3"
            >
              <span>
                Twelfth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root test-row-classname"
            data-testid="Thirteenth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Thirteenth Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiPrivateSwitchBase-checked MuiCheckbox-checked active"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <input
                    checked=""
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-thirteenth-datum"
                    id="Thirteenth Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Thirteenth Datum-1"
            >
              <span>
                Thirteenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Thirteenth Datum-2"
            >
              Fifteenth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-sixteenth-datum-className"
              data-cell-id="Thirteenth Datum-3"
            >
              <span>
                Sixteenth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root test-row-classname"
            data-testid="Seventeenth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Seventeenth Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiPrivateSwitchBase-checked MuiCheckbox-checked active"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <input
                    checked=""
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-seventeenth-datum"
                    id="Seventeenth Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventeenth Datum-1"
            >
              <span>
                Seventeenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventeenth Datum-2"
            >
              Eighteenth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-ninteenth-datum-className"
              data-cell-id="Seventeenth Datum-3"
            >
              <span>
                Ninteenth Datum
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`render paged table with default ids, and test row highlighting 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root pagedTableCardRoot card"
    data-testid="paged-table"
  >
    <div
      class="MuiCardHeader-root"
      data-testid="card-header"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title card-title"
        />
        <span
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiCardHeader-subheader"
        />
      </div>
      <div
        class="MuiCardHeader-action headerActions"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Export to CSV
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiCardContent-root pagedTableCardBody tableContainer"
      data-testid="card-content"
    >
      <table
        class="MuiTable-root table"
        data-testid="table"
        tabindex="0"
      >
        <thead
          class="MuiTableHead-root TableHeader"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head COLUMN_SELECT-header singleIcon"
              scope="col"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-header"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head columnOne-header tableHeader"
              scope="col"
            >
              Column One
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head columnTwo-header tableHeader"
              scope="col"
            >
              Column Two
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head tableHeader"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
            data-testid="0"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="0-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-0"
                    id="0"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="0-1"
            >
              <span>
                First Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="0-2"
            >
              Second Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-third-datum-className"
              data-cell-id="0-3"
            >
              <span>
                Third Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="1"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="1-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-1"
                    id="1"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="1-1"
            >
              <span>
                Fourth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="1-2"
            >
              Fifth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-sixth-datum-className"
              data-cell-id="1-3"
            >
              <span>
                Sixth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="2"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="2-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-2"
                    id="2"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="2-1"
            >
              <span>
                Seventh Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="2-2"
            >
              Eighth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-ninth-datum-className"
              data-cell-id="2-3"
            >
              <span>
                Ninth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="3"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="3-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-3"
                    id="3"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="3-1"
            >
              <span>
                Tenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="3-2"
            >
              Eleventh Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-twelfth-datum-className"
              data-cell-id="3-3"
            >
              <span>
                Twelfth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="4"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="4-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-4"
                    id="4"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="4-1"
            >
              <span>
                Thirteenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="4-2"
            >
              Fifteenth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-sixteenth-datum-className"
              data-cell-id="4-3"
            >
              <span>
                Sixteenth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="5"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="5-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-5"
                    id="5"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="5-1"
            >
              <span>
                Seventeenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="5-2"
            >
              Eighteenth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-ninteenth-datum-className"
              data-cell-id="5-3"
            >
              <span>
                Ninteenth Datum
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`render paged table with no initially selected items, then select items 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root pagedTableCardRoot card"
    data-testid="paged-table"
  >
    <div
      class="MuiCardHeader-root"
      data-testid="card-header"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title card-title"
        />
        <span
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiCardHeader-subheader"
        />
      </div>
      <div
        class="MuiCardHeader-action headerActions"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Export to CSV
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiCardContent-root pagedTableCardBody tableContainer"
      data-testid="card-content"
    >
      <table
        class="MuiTable-root table"
        data-testid="table"
        tabindex="0"
      >
        <thead
          class="MuiTableHead-root TableHeader"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head COLUMN_SELECT-header singleIcon"
              scope="col"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-header"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head columnOne-header tableHeader"
              scope="col"
            >
              Column One
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head columnTwo-header tableHeader"
              scope="col"
            >
              Column Two
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head tableHeader"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
            data-testid="First Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="First Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-first-datum"
                    id="First Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="First Datum-1"
            >
              <span>
                First Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="First Datum-2"
            >
              Second Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-third-datum-className"
              data-cell-id="First Datum-3"
            >
              <span>
                Third Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Fourth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Fourth Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-fourth-datum"
                    id="Fourth Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Fourth Datum-1"
            >
              <span>
                Fourth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Fourth Datum-2"
            >
              Fifth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-sixth-datum-className"
              data-cell-id="Fourth Datum-3"
            >
              <span>
                Sixth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Seventh Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Seventh Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-seventh-datum"
                    id="Seventh Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventh Datum-1"
            >
              <span>
                Seventh Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventh Datum-2"
            >
              Eighth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-ninth-datum-className"
              data-cell-id="Seventh Datum-3"
            >
              <span>
                Ninth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Tenth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Tenth Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-tenth-datum"
                    id="Tenth Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Tenth Datum-1"
            >
              <span>
                Tenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Tenth Datum-2"
            >
              Eleventh Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-twelfth-datum-className"
              data-cell-id="Tenth Datum-3"
            >
              <span>
                Twelfth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Thirteenth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Thirteenth Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-thirteenth-datum"
                    id="Thirteenth Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Thirteenth Datum-1"
            >
              <span>
                Thirteenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Thirteenth Datum-2"
            >
              Fifteenth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-sixteenth-datum-className"
              data-cell-id="Thirteenth Datum-3"
            >
              <span>
                Sixteenth Datum
              </span>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
            data-testid="Seventeenth Datum"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell singleIcon"
              data-cell-id="Seventeenth Datum-0"
            >
              <span
                class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input"
                    data-indeterminate="false"
                    data-testid="table-checkbox-cell-seventeenth-datum"
                    id="Seventeenth Datum"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventeenth Datum-1"
            >
              <span>
                Seventeenth Datum
              </span>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell"
              data-cell-id="Seventeenth Datum-2"
            >
              Eighteenth Datum
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body tableCell test-ninteenth-datum-className"
              data-cell-id="Seventeenth Datum-3"
            >
              <span>
                Ninteenth Datum
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`render paged table with no results 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root pagedTableCardRoot card"
    data-testid="paged-table"
  >
    <div
      class="MuiCardHeader-root"
      data-testid="card-header"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title card-title"
        />
        <span
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiCardHeader-subheader"
        />
      </div>
      <div
        class="MuiCardHeader-action headerActions"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Export to CSV
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiCardContent-root pagedTableCardBody tableContainer"
      data-testid="card-content"
    >
      <table
        class="MuiTable-root table"
        data-testid="table"
        tabindex="0"
      >
        <thead
          class="MuiTableHead-root TableHeader"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head columnOne-header tableHeader"
              scope="col"
            >
              Column One
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head columnTwo-header tableHeader"
              scope="col"
            >
              Column Two
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head tableHeader"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body no-results noResults"
              colspan="3"
            >
              0 Results
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`render paged table with no results and is loading 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root pagedTableCardRoot card"
    data-testid="paged-table"
  >
    <div
      class="MuiCardHeader-root"
      data-testid="card-header"
    >
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title card-title"
        />
        <span
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiCardHeader-subheader"
        />
      </div>
      <div
        class="MuiCardHeader-action headerActions"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Export to CSV
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiCardContent-root pagedTableCardBody tableContainer"
      data-testid="card-content"
    >
      <table
        class="MuiTable-root table"
        data-testid="table"
        tabindex="0"
      >
        <thead
          class="MuiTableHead-root TableHeader"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head columnOne-header tableHeader"
              scope="col"
            >
              Column One
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head columnTwo-header tableHeader"
              scope="col"
            >
              Column Two
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head tableHeader"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body no-results noResults"
              colspan="3"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="spinnerOverlay active"
    data-is-active="true"
    data-testid="spinner-overlay"
  >
    <div
      class="loading"
    />
  </div>
</div>
`;
